WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89151
[JSC/V8] "DOMString[]" for function return values should not be null
https://bugs.webkit.org/show_bug.cgi?id=89151
Summary
[JSC/V8] "DOMString[]" for function return values should not be null
Kent Tamura
Reported
2012-06-14 18:47:50 PDT
[JSC/V8] "DOMString[]" for function return values should not be null
Attachments
Patch
(3.51 KB, patch)
2012-06-14 19:01 PDT
,
Kent Tamura
haraken
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-06-14 19:01:46 PDT
Created
attachment 147707
[details]
Patch
Kentaro Hara
Comment 2
2012-06-14 19:09:44 PDT
Comment on
attachment 147707
[details]
Patch Looks OK
Kent Tamura
Comment 3
2012-06-14 19:11:42 PDT
Committed
r120389
: <
http://trac.webkit.org/changeset/120389
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug